tests/NormalTests/paczka1/small_fuzzy/17048354.err
Error in line 12: OIy24oDmPrp S667 -3,9
